# mourse

./: Cargo.toml  README.md
src/: app.rs  clicker.rs  main.rs  mouse_button.rs  mouse_mover.rs
